# gtk-android

./: .gitignore  meson.build
subprojects/: gdk-pixbuf.wrap  gtk.wrap
