project('gtk-android', ['c', 'java'],
  version : '0.0.1')

subproject('glib', default_options: ['libmount=disabled', 'selinux=disabled', 'iconv=libc'])
#subproject('harfbuzz')
subproject('libpng')
#subproject('freetype2')
subproject('expat')
subproject('linux-util')
subproject('fontconfig')
#subproject('libffi')
subproject('pcre')
subproject('graphene', default_options: ['introspection=false'])
#subproject('cairo')
subproject('pango', default_options: ['gir=false'])
subproject('gdk-pixbuf', default_options: ['x11=false', 'gir=false', 'docs=false'])
subproject('atk', default_options: ['introspection=false'])
subproject('libepoxy', default_options: ['glx=no', 'x11=false'])
subproject('gtk', default_options: ['wayland-backend=disabled', 'x11-backend=true', 'print-backends=none', 'media=none', 'introspection=disabled'])

subdir('samples')
