project('gtk-android', ['c', 'java'],
  version : '0.0.1')

subproject('glib', default_options: ['libmount=disabled', 'selinux=disabled', 'iconv=libc'])
#subproject('harfbuzz')
subproject('libpng')
#subproject('freetype2')
subproject('expat')
subproject('linux-util')
subproject('fontconfig')
#subproject('libffi')
subproject('pcre')
subproject('graphene', default_options: ['introspection=false'])
#subproject('cairo')
subproject('pango', default_options: ['gir=false'])
subproject('gdk-pixbuf', default_options: ['x11=false', 'gir=false', 'docs=false'])
subproject('atk', default_options: ['introspection=false'])
subproject('libepoxy', default_options: ['glx=yes', 'x11=true'])
subproject('gtk', default_options: ['wayland_backend=false', 'x11_backend=true', 'print_backends=none', 'introspection=false'])

subdir('samples')
